# all-isef-projects

./: .gitignore  Project.py  README.md  curl.sh  get-isef-database.ipynb  international-science-fair-analysis.ipynb  main.py  pyproject.toml
.github/workflows/: pages.yml
data/: embeddings_bge_m3.parquet
scripts/: create_embeddings_bge_m3.py  get_isef_database.py  make_bokeh.py  make_bokeh_callbacks.js
